/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * The OpenSearch Contributors require contributions made to
 * this file be licensed under the Apache-2.0 license or a
 * compatible open source license.
 *
 * Modifications Copyright OpenSearch Contributors. See
 * GitHub history for details.
 */

syntax = "proto3";
package org.opensearch.extensions.proto;

import "extensions/ExtensionIdentityProto.proto";
option java_outer_classname = "RegisterRestActionsProto";

message RegisterRestActions {
  ExtensionIdentity identity = 1;
  repeated string restActions = 2;
  repeated string deprecatedRestActions = 3;
}
